<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drawer_terkini"
            android:title="@string/menu_terkini" />
        <item
            android:id="@+id/nav_cerpen"
            android:icon="@drawable/ic_drawer_cerpen"
            android:title="@string/menu_cerpen" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_drawer_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_puisi"
            android:icon="@drawable/ic_drawer_puisi"
            android:title="@string/menu_puisi" />
        <item
            android:id="@+id/nav_creepypasta"
            android:icon="@drawable/ic_drawer_creepypasta"
            android:title="@string/menu_creepypasta" />
        <item
            android:id="@+id/nav_knowledge"
            android:icon="@drawable/ic_drawer_knowledge"
            android:title="@string/menu_knowledge" />
        <item android:id="@+id/nav_riddle"
            android:icon="@drawable/ic_drawer_riddle"
            android:title="@string/menu_riddle"/>
        <item android:id="@+id/nav_others"
            android:icon="@drawable/ic_drawer_others"
            android:title="@string/menu_others"/>
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
