<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.jabirdeveloper.ircofhurapollz.fragment.HomeFragment"
        android:label="@string/menu_terkini"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_bookmark"
        android:name="com.jabirdeveloper.ircofhurapollz.fragment.BawahBookmarkFragment"
        android:label="@string/menu_bookmark"
        tools:layout="@layout/fragment_bawah_bookmark" />

    <fragment
        android:id="@+id/menu_kontribusi"
        android:name="com.jabirdeveloper.ircofhurapollz.fragment.KontribusiFragment"
        android:label="@string/menu_kontribusi"
        tools:layout="@layout/fragment_kontribusi_old" />

</navigation>